Bug 1826960: Import choosing screen alignment fix
Allow the journal / plan headers to not be floated

behatnotneeded

(cherry picked from commit 9ec6646bb4460fcc29b25bd16851095ac26a4569)

--- a/htdocs/theme/raw/sass/components/_list-group.scss
+++ b/htdocs/theme/raw/sass/components/_list-group.scss
@@ -299,6 +299,11 @@
             border-bottom: 0;
         }
     }
+    .list-group-item {
+        .list-group-item-heading {
+            float: none;
+        }
+    }
 }
 
 .annotation-feedback {
